--- a/.github/workflows/onPushRun.yml
+++ b/.github/workflows/onPushRun.yml
@@ -10,5 +10,5 @@ jobs:
               uses: actions/checkout@v4
             - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
             - run: npm install
-            - run: npm test ./test/P0/*.spec.ts
+            - run: npm test ./test/P0/
             - run: echo "This job's status is ${{ job.status }}."
