--- a/.github/workflows/nightlyRun.yml
+++ b/.github/workflows/nightlyRun.yml
@@ -13,5 +13,8 @@ jobs:
               uses: actions/checkout@v4
             - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
             - run: npm install
-            - run: npm test
+            - name: Run tests
+              run: npm test
+              env:
+                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             - run: echo "This job's status is ${{ job.status }}."
