--- a/.github/workflows/onPushRun.yml
+++ b/.github/workflows/onPushRun.yml
@@ -10,5 +10,8 @@ jobs:
               uses: actions/checkout@v4
             - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
             - run: npm install
-            - run: npm test ./test/P0/
+            - name: Run tests
+              run: npm test ./test/P0/
+              env:
+                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             - run: echo "This job's status is ${{ job.status }}."
